# sptf-tui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
docs/: architecture.md  developer-setup.md
examples/: config.toml
src/: cli.rs  lib.rs  main.rs
src/app/: app.rs  events.rs  mod.rs
src/config/: loader.rs  mod.rs  paths.rs  settings.rs
src/core/: error.rs  logging.rs  mod.rs
src/domain/: mod.rs  playback.rs  player.rs  track.rs
src/infrastructure/: mod.rs
src/input/: action.rs  key_parser.rs  keymap.rs  mod.rs
src/mpris/: discovery.rs  mod.rs  pactl.rs  parser.rs  proxy.rs  service.rs
src/rendering/: cache.rs  loader.rs  mod.rs  picker.rs
src/services/: mock.rs  mod.rs  player.rs
src/state/: mod.rs
src/tui/: mod.rs  terminal.rs  theme.rs  view.rs
src/utils/: mod.rs  time.rs
src/widgets/: album_art.rs  banner.rs  big_title.rs  controls.rs  help_bar.rs  mod.rs  now_playing.rs  volume.rs
tests/: bootstrap.rs  config_layering.rs  player_service.rs
