[package]
name = "sptf-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A terminal music controller for Linux with MPRIS/DBus integration and in-terminal album art."
license = "MIT OR Apache-2.0"
repository = "https://github.com/sebastiancastillo/sptf-tui"
readme = "README.md"
keywords = ["tui", "music", "spotify", "mpris", "ratatui"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "sptf"
path = "src/main.rs"

[dependencies]
# TUI / terminal
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
futures = "0.3"

# DBus / MPRIS
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Image handling + in-terminal rendering
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
ratatui-image = { version = "5", default-features = false, features = ["crossterm"] }
# Glyph data for the in-house big-title widget. We previously used
# tui-big-text but it only consults BASIC_FONTS, so Spanish diacritics +
# hiragana fell through (see src/widgets/big_title.rs).
font8x8 = "0.3"
unicode-width = "0.2"

# Serialization / config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
config = { version = "0.15", default-features = false, features = ["toml"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# CLI parsing
clap = { version = "4", features = ["derive", "env"] }

# Paths
directories = "6"

# HTTP for album art (kept minimal for now, used later)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }

# Misc
url = "2"
once_cell = "1"
async-trait = "0.1"
lru = "0.12"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros", "rt"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "forbid"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
module_inception = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
multiple_crate_versions = "allow"
single_match_else = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
doc_markdown = "allow"
similar_names = "allow"
struct_field_names = "allow"
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_possible_wrap = "allow"
implicit_hasher = "allow"
needless_pass_by_value = "allow"
significant_drop_tightening = "allow"
significant_drop_in_scrutinee = "allow"
